# The-Complete-Rust-Programming-Reference-Guide-My-notes

./: README.md
code/ch01/: Cargo.toml  info.txt
code/ch01/members/arrays/src/: main.rs
code/ch01/members/closures/src/: main.rs
code/ch01/members/enum_methods/: Cargo.toml
code/ch01/members/enum_methods/src/: lib.rs  main.rs
code/ch01/members/enums/src/: lib.rs  main.rs
code/ch01/members/exercise_word_counter/: Cargo.toml
code/ch01/members/exercise_word_counter/src/: lib.rs  main.rs
code/ch01/members/first_program/src/: main.rs
code/ch01/members/for_loops/: Cargo.toml
code/ch01/members/for_loops/src/: main.rs
code/ch01/members/function_mut/: Cargo.toml
code/ch01/members/function_mut/src/: lib.rs  main.rs
code/ch01/members/functions/src/: lib.rs  main.rs
code/ch01/members/greet/: Cargo.toml
code/ch01/members/greet/src/: main.rs
code/ch01/members/hashmaps/src/: main.rs
code/ch01/members/if_assign/: Cargo.toml
code/ch01/members/if_assign/src/: lib.rs  (+1 more)
code/ch01/members/match_expression/: Cargo.toml
code/ch01/members/uses/: Cargo.toml
code/ch01/members/while_project/: Cargo.toml
code/ch01/src/: main.rs
code/ch02/members/cargo_manifest_example/: Cargo.toml
code/ch04/: Cargo.toml  README.md
code/ch04/members/generic_enum/: Cargo.toml
code/ch04/members/generic_function/: Cargo.toml
code/ch04/members/generic_struct_impl/: Cargo.toml
code/ch04/members/impl_trait_both/: Cargo.toml
code/ch04/members/impl_trait_closure/: Cargo.toml
code/ch04/members/super-player/: Cargo.toml
code/ch04/members/trait_bound_basics_fixed/: Cargo.toml
code/ch04/members/trait_bounds_intro/: Cargo.toml
code/ch04/members/trait_inheritance/: Cargo.toml
code/ch04/members/traits_composition/: Cargo.toml
code/ch04/members/using_generic_func/: Cargo.toml
code/ch08/: Cargo.toml
code/ch08/members/actor_demo/: Cargo.toml
code/ch08/members/arc_mutex/: Cargo.toml
code/ch08/members/async_channels/: Cargo.toml
code/ch08/members/customize_threads/: Cargo.toml
code/ch08/members/mutex_basics/: Cargo.toml
code/ch08/members/sync_channels/: Cargo.toml
code/ch08/members/thread_arc/: Cargo.toml
code/ch08/members/thread_basics_join/: Cargo.toml
code/ch08/members/thread_moves/: Cargo.toml
code/ch08/members/thread_mut/: Cargo.toml
code/ch08/members/thread_rwlock/: Cargo.toml
code/ch10/my-module/: Cargo.toml  README.md  package-lock.json  package.json
code/ch10/my-module/src/: lib.rs
(+134 files in other folders)
