workspace={members=["members/actor_demo", "members/arc_mutex", "members/async_channels", "members/customize_threads", "members/mutex_basics", "members/sync_channels", "members/thread_arc", "members/thread_basics_join", "members/thread_moves", "members/thread_mut", "members/thread_rwlock"]}
[package]
name = "ch08"
version = "0.1.0"
edition = "2021"

[dependencies]
