[package]
name = "my-module"
version = "0.1.0"
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
num_cpus = "1.16.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.neon]
version="1"
features = ["napi-6"]


